improve en-passante related activities