@@ -2,6 +2,7 @@ package com.agutsul.chess.piece.pawn;
 
 import static com.agutsul.chess.rule.impact.PieceAttackImpactFactory.createAttackImpact;
 import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
 
 import java.util.Collection;
 import java.util.List;
@@ -11,6 +12,7 @@ import java.util.Optional;
 import java.util.stream.Stream;
 
 import com.agutsul.chess.Capturable;
+import com.agutsul.chess.EnPassantable.EnPassant;
 import com.agutsul.chess.activity.impact.PieceAttackImpact;
 import com.agutsul.chess.activity.impact.PieceMotionImpact;
 import com.agutsul.chess.activity.impact.PieceSacrificeAttackImpact;
@@ -21,7 +23,9 @@ import com.agutsul.chess.color.Color;
 import com.agutsul.chess.piece.PawnPiece;
 import com.agutsul.chess.piece.Piece;
 import com.agutsul.chess.piece.algo.Algo;
+import com.agutsul.chess.piece.algo.CapturePieceAlgo;
 import com.agutsul.chess.piece.algo.CompositePieceAlgo;
+import com.agutsul.chess.piece.algo.EnPassantPieceAlgo;
 import com.agutsul.chess.position.Position;
 import com.agutsul.chess.rule.impact.sacrifice.PieceSacrificePositionImpactRule;
 
@@ -33,15 +37,15 @@ final class PawnSacrificeImpactRule<COLOR1 extends Color,
         extends PieceSacrificePositionImpactRule<COLOR1,COLOR2,SACRIFICED,ATTACKER,ATTACKED> {
 
     private final Algo<SACRIFICED,Collection<Position>> moveAlgo;
-    private final PawnCaptureAlgo<COLOR1,SACRIFICED> captureAlgo;
-    private final PawnEnPassantAlgo<COLOR1,SACRIFICED> enPassantAlgo;
+    private final CapturePieceAlgo<COLOR1,SACRIFICED,Position> captureAlgo;
+    private final EnPassantPieceAlgo<COLOR1,SACRIFICED,EnPassant> enPassantAlgo;
 
     @SuppressWarnings("unchecked")
     PawnSacrificeImpactRule(Board board,
                             PawnMoveAlgo<COLOR1,SACRIFICED> moveAlgo,
                             PawnBigMoveAlgo<COLOR1,SACRIFICED> bigMoveAlgo,
-                            PawnCaptureAlgo<COLOR1,SACRIFICED> captureAlgo,
-                            PawnEnPassantAlgo<COLOR1,SACRIFICED> enPassantAlgo) {
+                            CapturePieceAlgo<COLOR1,SACRIFICED,Position> captureAlgo,
+                            EnPassantPieceAlgo<COLOR1,SACRIFICED,EnPassant> enPassantAlgo) {
 
         super(board);
 
@@ -84,7 +88,7 @@ final class PawnSacrificeImpactRule<COLOR1 extends Color,
                         ))
                         .map(impact -> (PieceSacrificeImpact<COLOR1,COLOR2,SACRIFICED,ATTACKER>) impact)
                 )
-                .collect(toList());
+                .toList();
 
          return impacts;
     }
@@ -111,7 +115,7 @@ final class PawnSacrificeImpactRule<COLOR1 extends Color,
                                 .map(impact -> (PieceSacrificeImpact<COLOR1,COLOR2,SACRIFICED,ATTACKER>) impact)
                         )
                 )
-                .collect(toList());
+                .toList();
 
         return impacts;
     }
@@ -120,7 +124,9 @@ final class PawnSacrificeImpactRule<COLOR1 extends Color,
             createSacrificeEnPassantImpacts(SACRIFICED pawn,
                                             Map<Piece<Color>,List<Position>> pieceControls) {
 
-        var enPassantData = enPassantAlgo.calculateData(pawn);
+        var enPassantData = Stream.of(enPassantAlgo.calculate(pawn))
+                .flatMap(Collection::stream)
+                .collect(toMap(EnPassant::getPosition, EnPassant::getPiece));
 
         @SuppressWarnings("unchecked")
         var impacts = Stream.of(enPassantData.keySet())
@@ -131,8 +137,6 @@ final class PawnSacrificeImpactRule<COLOR1 extends Color,
                         .filter(entry -> entry.getValue().contains(position))
                         .map(Map.Entry::getKey)
                         .flatMap(piece -> Stream.ofNullable(enPassantData.get(position))
-                                .filter(foundPiece -> !Objects.equals(foundPiece.getColor(), pawn.getColor()))
-                                .filter(Piece::isPawn)
                                 .map(opponentPawn -> new PieceSacrificeAttackImpact<>(
                                         new PieceAttackImpact<>(pawn, (ATTACKED) opponentPawn, position), // enPassant attack
                                         new PieceAttackImpact<>((ATTACKER) piece, pawn, position) // capture enPassanted pawn as a sacrifice
@@ -140,7 +144,7 @@ final class PawnSacrificeImpactRule<COLOR1 extends Color,
                                 .map(impact -> (PieceSacrificeImpact<COLOR1,COLOR2,SACRIFICED,ATTACKER>) impact)
                         )
                 )
-                .collect(toList());
+                .toList();
 
         return impacts;
     }
